[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/behaviour_tree/node_scenes/queries/BTQ_HasProperty.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/behaviour_tree/node_scenes/BT_Decorator.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/behaviour_tree/node_scenes/BT_Compositor.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/behaviour_tree/node_scenes/actions/BTA_LoadPropertyFrom.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/behaviour_tree/node_scenes/tree_fragments/BT_LoadPropertyOnce.gd" type="Script" id=5]

[node name="BT_LoadPropertyOnce" instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="BT_Decorator" parent="." index="0" instance=ExtResource( 2 )]

[node name="BTQ_HasProperty" parent="BT_Decorator" index="0" instance=ExtResource( 1 )]

[node name="BTA_LoadPropertyFrom" parent="." index="1" instance=ExtResource( 4 )]
